--- a/index.html
+++ b/index.html
@@ -19,18 +19,23 @@
   <div class="row">
     <div class="col-sm-4">
       <h3>Column 1</h3>
+      <p>Added New Column 1 paragraph...</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Pejorum liscivium poleminus...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <h3>Column 3</h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 4</h3>        
+      <p>Added New Column 4</p>
+      <p>Changed while in inline file-diff view..</p>
     </div>
   </div>
 </div>
